[package]
name = "exif-catcher"
version = "1.1.0"
edition = "2021"

[dependencies]
# CLI参数解析和交互
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"

# 并行处理
rayon = "1.10"

# EXIF解析
kamadak-exif = "0.5"

# 图片处理
image = "0.25"

# WebP编码（有损压缩支持）
webp = "0.3"

# JSON序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"

# 目录递归遍历
walkdir = "2.4"

# 彩色输出
colored = "2.1"

# 进度条
indicatif = { version = "0.17", features = ["rayon"] }
